# Franka_Panda_Color_Sorting_Robot

./: .gitignore  README.md
panda_bringup/: package.xml
panda_bringup/launch/: pick_and_place.launch.py
panda_controller/config/: panda_controllers.yaml
panda_controller/launch/: controller.launch.py
panda_description/launch/: display.launch.py
panda_description/models/Aura_Payload/: model.config
panda_description/models/Aura_Payload_2/: model.sdf
panda_description/urdf/: arm.xacro  gazebo.xacro  materials.xacro  panda.urdf.xacro  ros2control.xacro  sensors.xacro
panda_description/worlds/: empty.world
panda_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  panda.srdf
panda_script/: CMakeLists.txt  package.xml
panda_script/src/: panda_color_picker.cpp
panda_vision/panda_vision/: color_detector.py
pymoveit2/: CMakeLists.txt
pymoveit2/examples/: ex_pose_goal.py  pick_and_place.py
pymoveit2/pymoveit2/robots/: panda.py
repo-clean/panda_description/models/Aura_Payload/: model.sdf
repo-clean/panda_description/models/Aura_Payload_2/: model.config
repo-clean/panda_description/models/Aura_Payload_2/meshes/: aura_payload.stl
repo-clean/panda_description/models/Aura_Payload_3/: model.config  model.sdf
repo-clean/panda_description/worlds/: empty.world
