<?xml version="1.0"?>
<package format="3">
  <name>panda_script</name>
  <version>0.0.0</version>
  <description>Panda Robot MoveIt2 color pick and place package</description>

  <maintainer email="kutkarsh706@gmail.com">utk</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependency -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
